--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  # aws-cli: circleci/aws-cli@2.1.0
+  aws-cli: circleci/aws-cli@2.1.0
   slack: circleci/slack@4.10.1
 
 # commands:
