--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
-# orbs:
-#   aws-cli: circleci/aws-cli@2.1.0
-#   slack: circleci/slack@4.10.1
+orbs:
+  aws-cli: circleci/aws-cli@2.1.0
+  slack: circleci/slack@4.10.1
 
 # commands:
 #   destroy-environment:
@@ -130,7 +130,7 @@ jobs:
           name: Scan the Backend
           command: |
             cd backend
-            npm updateorbs
+            # npm updateorbs
             npm i
             npm audit fix --audit-level=critical --force
             npm audit fix --audit-level=critical --force
