--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,25 +20,25 @@ commands:
             aws cloudformation delete-stack --stack-name udapeople-backend-<<parameters.workflow_id>>
             aws cloudformation delete-stack --stack-name udapeople-frontend-<<parameters.workflow_id>>
 
-#   revert-migrations:
-#     description: Revert the last migration if successfully run in the current workflow.
-#     parameters:
-#       # Add parameter here     
-#       workflow_id:
-#         type: string
-#     steps:
-#       - run:
-#           name: Revert migrations
-#           when: on_fail
-#           command: |
-#             echo "Reverting Database  ########### "
-#             SUCCESS=$(curl --insecure https://kvdb.io/63vbmnEzTac6vpR5QLJMK9/migration_<<parameters.workflow_id>>)
-#             if (( $SUCCESS == 1 ));
-#             then
-#               cd ~/project/backend
-#               npm install
-#               npm run migrations:revert
-#             fi 
+  revert-migrations:
+    description: Revert the last migration if successfully run in the current workflow.
+    parameters:
+      # Add parameter here     
+      workflow_id:
+        type: string
+    steps:
+      - run:
+          name: Revert migrations
+          when: on_fail
+          command: |
+            echo "Reverting Database  ########### "
+            SUCCESS=$(curl --insecure https://kvdb.io/63vbmnEzTac6vpR5QLJMK9/migration_<<parameters.workflow_id>>)
+            if (( $SUCCESS == 1 ));
+            then
+              cd ~/project/backend
+              npm install
+              npm run migrations:revert
+            fi 
             
 jobs:
   build-frontend:
@@ -215,42 +215,42 @@ jobs:
       - destroy-environment:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
 
-  # run-migrations:
-  #   docker:
-  #     # Docker image here that supports NodeJS
-  #     - image: circleci/node:13.8.0
-  #   steps:
-  #     # Checkout code from git
-  #     - checkout
-  #     - restore_cache:
-  #         keys: [backend-build]
-  #     - run:
-  #         name: Install dependencies
-  #         command: |
-  #           sudo apt update
-  #           sudo apt upgrade -y
-  #           sudo apt install -y awscli
-  #     - run:
-  #         name: Run migrations
-  #         command: |
-  #           cd backend
-  #           npm install
-  #           npm run migrations > migrations_dump.txt
-  #     - run:
-  #         name: Send Migration status to kvdb.io
-  #         command: |
-  #           cat ~/project/backend/migrations_dump.txt
-  #           cd backend
-  #           if grep -q "has been executed successfully." migrations_dump.txt
-  #           then
-  #             SUCCESS=$(curl https://kvdb.io/63vbmnEzTac6vpR5QLJMK9/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1')
-  #             echo "MIGRATION WAS SUCCESSFUL"
-  #           else
-  #             SUCCESS=$(curl https://kvdb.io/63vbmnEzTac6vpR5QLJMK9/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '0')
-  #             echo "MIGRATION FAILED"
-  #           fi
-  #     - destroy-environment:
-  #         workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
+  run-migrations:
+    docker:
+      # Docker image here that supports NodeJS
+      - image: circleci/node:13.8.0
+    steps:
+      # Checkout code from git
+      - checkout
+      - restore_cache:
+          keys: [backend-build]
+      - run:
+          name: Install dependencies
+          command: |
+            sudo apt update
+            sudo apt upgrade -y
+            sudo apt install -y awscli
+      - run:
+          name: Run migrations
+          command: |
+            cd backend
+            npm install
+            npm run migrations > migrations_dump.txt
+      - run:
+          name: Send Migration status to kvdb.io
+          command: |
+            cat ~/project/backend/migrations_dump.txt
+            cd backend
+            if grep -q "has been executed successfully." migrations_dump.txt
+            then
+              SUCCESS=$(curl https://kvdb.io/63vbmnEzTac6vpR5QLJMK9/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1')
+              echo "MIGRATION WAS SUCCESSFUL"
+            else
+              SUCCESS=$(curl https://kvdb.io/63vbmnEzTac6vpR5QLJMK9/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '0')
+              echo "MIGRATION FAILED"
+            fi
+      - destroy-environment:
+          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
 
   # deploy-frontend:
   #   docker:
@@ -481,8 +481,8 @@ workflows:
               only: [main]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
-      # - run-migrations:
-      #     requires: [configure-infrastructure]
+      - run-migrations:
+          requires: [configure-infrastructure]
       # - deploy-frontend:
       #     requires: [run-migrations]
       # - deploy-backend:
