--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -328,53 +328,53 @@ jobs:
       - revert-migrations:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
 
-  # smoke-test:
-  #   docker:
-  #     # Lightweight Docker image
-  #     - image: python:3.7-alpine
-  #   steps:
-  #     # Checkout code from git
-  #     - checkout
-  #     - run:
-  #         name: Install dependencies
-  #         command: |
-  #           # your code here
-  #           apk upgrade
-  #           apk update
-  #           apk add --update unzip curl nodejs npm
-  #           pip install awscli
-  #     - run:
-  #         name: Get backend url and Backend Smoke Test
-  #         command: |
-  #           BACKEND_IP=$(aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" --output text)
-  #           API_URL="http://${BACKEND_IP}:3030"
-  #           echo "API_URL = ${API_URL}"
+  smoke-test:
+    docker:
+      # Lightweight Docker image
+      - image: python:3.7-alpine
+    steps:
+      # Checkout code from git
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            # your code here
+            apk upgrade
+            apk update
+            apk add --update unzip curl nodejs npm
+            pip install awscli
+      - run:
+          name: Get backend url and Backend Smoke Test
+          command: |
+            BACKEND_IP=$(aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" --output text)
+            API_URL="http://${BACKEND_IP}:3030"
+            echo "API_URL = ${API_URL}"
 
-  #           if curl "${API_URL}/api/status" | grep "ok"
-  #           then 
-  #             echo "Smoke Test was Successful"
-  #             return 0
-  #           else
-  #             echo "Smoke Test Failed"
-  #             return 1
-  #           fi
-  #     - run:
-  #         name: Frontend smoke test
-  #         command: |
-  #           # your code here
-  #           URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
-  #           echo ${URL} 
-  #           if curl -s ${URL} | grep "Welcome"
-  #           then
-  #             return 0
-  #           else
-  #             return 1
-  #           fi
-  #     # Here's where you will add some code to rollback on failure
-  #     - destroy-environment:
-  #         workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
-  #     - revert-migrations:
-  #         workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
+            if curl "${API_URL}/api/status" | grep "ok"
+            then 
+              echo "Smoke Test was Successful"
+              return 0
+            else
+              echo "Smoke Test Failed"
+              return 1
+            fi
+      - run:
+          name: Frontend smoke test
+          command: |
+            # your code here
+            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
+            echo ${URL} 
+            if curl -s ${URL} | grep "Welcome"
+            then
+              return 0
+            else
+              return 1
+            fi
+      # Here's where you will add some code to rollback on failure
+      - destroy-environment:
+          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
+      - revert-migrations:
+          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
 
   # cloudfront-update:
   #   docker:
@@ -487,8 +487,8 @@ workflows:
           requires: [run-migrations]
       - deploy-backend:
           requires: [run-migrations]
-      # - smoke-test:
-      #     requires: [deploy-backend, deploy-frontend]
+      - smoke-test:
+          requires: [deploy-backend, deploy-frontend]
       # - cloudfront-update:
       #     requires: [smoke-test]
       # - cleanup:
