--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -416,48 +416,48 @@ jobs:
       - revert-migrations:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
 
-  # cleanup:
-  #   docker:
-  #     # Docker image here
-  #     - image: amazon/aws-cli
-  #   steps:
-  #     # Checkout code from git
-  #     - checkout
-  #     - run:
-  #         name: Get old stack workflow id
-  #         command: |
-  #           # Fetch the Old workflow ID
-  #           OldWorkflowID=$(curl --insecure https://kvdb.io/WwrG1rKzrzdBiyWX5Q3YgW/${CIRCLE_WORKFLOW_ID:0:7})
-  #           echo OldWorkflowID: $OldWorkflowID
-  #           echo Current Workflow ID: ${CIRCLE_WORKFLOW_ID:0:7}
-  #           # Fetch the stack names
-  #           aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
-  #             --stack-status-filter CREATE_COMPLETE --no-paginate --output text >> ~/stacks.txt
-  #           echo Stack names: $(cat ~/stacks.txt)
-  #     - run:
-  #         name: Remove old stacks and files
-  #         command: |
-  #           OldWorkflowID=$(curl --insecure https://kvdb.io/WwrG1rKzrzdBiyWX5Q3YgW/${CIRCLE_WORKFLOW_ID:0:7})
-  #           Stacks=$(cat ~/stacks.txt)
-  #           echo OldWorkflowID: $OldWorkflowID
-  #           echo Stack names: ${Stacks[@]}
-  #           if [[ "${Stacks[@]}" =~ "${OldWorkflowID}" ]]
-  #           then
-  #             echo "Destroying environment: ${OldWorkflowID}"
-  #             if echo $Stacks | grep -q "udapeople-backend-${OldWorkflowID}"
-  #             then
-  #               aws cloudformation delete-stack --stack-name udapeople-backend-${OldWorkflowID}
-  #             fi
-  #             if echo $Stacks | grep -q "udapeople-frontend-${OldWorkflowID}"
-  #             then
-  #               aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
-  #               aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
-  #               aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+  cleanup:
+    docker:
+      # Docker image here
+      - image: amazon/aws-cli
+    steps:
+      # Checkout code from git
+      - checkout
+      - run:
+          name: Get old stack workflow id
+          command: |
+            # Fetch the Old workflow ID
+            OldWorkflowID=$(curl --insecure https://kvdb.io/WwrG1rKzrzdBiyWX5Q3YgW/${CIRCLE_WORKFLOW_ID:0:7})
+            echo OldWorkflowID: $OldWorkflowID
+            echo Current Workflow ID: ${CIRCLE_WORKFLOW_ID:0:7}
+            # Fetch the stack names
+            aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
+              --stack-status-filter CREATE_COMPLETE --no-paginate --output text >> ~/stacks.txt
+            echo Stack names: $(cat ~/stacks.txt)
+      - run:
+          name: Remove old stacks and files
+          command: |
+            OldWorkflowID=$(curl --insecure https://kvdb.io/WwrG1rKzrzdBiyWX5Q3YgW/${CIRCLE_WORKFLOW_ID:0:7})
+            Stacks=$(cat ~/stacks.txt)
+            echo OldWorkflowID: $OldWorkflowID
+            echo Stack names: ${Stacks[@]}
+            if [[ "${Stacks[@]}" =~ "${OldWorkflowID}" ]]
+            then
+              echo "Destroying environment: ${OldWorkflowID}"
+              if echo $Stacks | grep -q "udapeople-backend-${OldWorkflowID}"
+              then
+                aws cloudformation delete-stack --stack-name udapeople-backend-${OldWorkflowID}
+              fi
+              if echo $Stacks | grep -q "udapeople-frontend-${OldWorkflowID}"
+              then
+                aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+                aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+                aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
 
-  #             fi
-  #           else
-  #             echo "--------------- Error in the Cleanup ---------------"
-  #           fi
+              fi
+            else
+              echo "--------------- Error in the Cleanup ---------------"
+            fi
             
 
 workflows:
@@ -491,5 +491,5 @@ workflows:
           requires: [deploy-backend, deploy-frontend]
       - cloudfront-update:
           requires: [smoke-test]
-      # - cleanup:
-      #     requires: [cloudfront-update]
+      - cleanup:
+          requires: [cloudfront-update]
