--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,7 +77,7 @@ jobs:
             cd frontend
             npm update
             npm i
-            npm audit fix --audit-level=critical --force
+            # npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
 
   scan-backend:
