--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,7 +77,7 @@ jobs:
             cd frontend
             npm update
             npm i
-            # npm audit fix --audit-level=critical --force
+            npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
 
   scan-backend:
@@ -92,6 +92,9 @@ jobs:
           command: |
             cd backend
             npm i
+            # npm audit fix --audit-level=critical --force
+            # npm audit fix --audit-level=critical --force
+            npm audit --audit-level=critical
 
 workflows:
   default:
